--- a/language-java.cabal
+++ b/language-java.cabal
@@ -1,5 +1,5 @@
 Name:                   language-java
-Version:                0.2.7
+Version:                0.2.7.14
 License:                BSD3
 License-File:           LICENSE
 Author:                 Niklas Broberg
@@ -35,7 +35,8 @@ Library
   Exposed-modules:      Language.Java.Lexer,
                         Language.Java.Syntax,
                         Language.Java.Parser,
-                        Language.Java.Pretty
+                        Language.Java.Pretty,
+                        Language.Java.LexerUtils
   
   Other-modules:	
 
